Updated SQL Server module to fix issues with sql files and use sql parameters for queries to escape strings as well as sanitize for sql injection

--- a/src/Modules/mod-db-sql/mod-db-sql.csproj
+++ b/src/Modules/mod-db-sql/mod-db-sql.csproj
@@ -63,6 +63,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="sql-create-checkstatus.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="sql-create-getinstance.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
